--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="felix.rmspeed">
 
+    <uses-feature
+        android:name="android.hardware.camera2"
+        android:required="true"/>
+
     <application
         android:largeHeap="true"
         android:allowBackup="true"
